--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 1xmMl7iEswLgn6cc+Mha3A
-# Updated: 26 Sep 2010
+# Checksum: K+yrGWD4dyf/O+jSglMFhQ
+# Updated: 27 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
 &ad_number=
@@ -402,9 +402,9 @@
 .camcrush.com/exports/
 .camduty.com/
 .camelmedia.net/thumbs/
+.campusfood.com/content/dfp.
 .camsense.com/live/code.
 .camsitecash.com/
-.campusfood.com/content/dfp.
 .canoeklix.com/
 .capitatmarket.com/
 .captainad.
@@ -584,6 +584,7 @@
 .emediate.eu/
 .emediate.se/
 .emptyspaceads.com/
+.entriq.net/ads/
 .eporner.com/ads-
 .ero-advertising.com
 .erosadv.com/
@@ -594,7 +595,6 @@
 .eurobate.
 .euroclick.
 .euros4click.
-.entriq.net/ads/
 .eweek.com/images/stories/Marketing/
 .exaccess.ru/
 .exclusivepussy.com/tcgma/?
@@ -1160,6 +1160,7 @@
 .surveymonkey.com/jsPop.aspx?
 .surveywriter.net/in/survey/
 .svlu.net/
+.swedishwire.com/images/banners/
 .sweetmedia.org/
 .swelen.com
 .swf?BannerId
@@ -1167,7 +1168,6 @@
 .swf?link1=http
 .swf?link=http
 .swiftco.net/banner/
-.swedishwire.com/images/banners/
 .sxc.hu/img/banner
 .symbiosting.com/LogicBuy/
 .tacoda.net/
@@ -1194,7 +1194,6 @@
 .timesonline.co.uk/date/profiles/
 .titsintops.com/intersitial/
 .tizernet.com/engine.php?
-.tsn.ca/images/silver/ae/superboard/
 .tkqlhce.
 .tkqlhce.
 .tldadserv.com/
@@ -1232,6 +1231,7 @@
 .travidia.
 .triadmedianetwork.
 .tribalfusion.
+.tsn.ca/images/silver/ae/superboard/
 .ttzmedia.
 .tube8.com/ad?
 .tubedspots.com/
@@ -1534,8 +1534,8 @@
 /ad1.jpg
 /ad2.htm
 /ad2games.com/
-/ad300x145.
 /ad300.htm
+/ad300x145.
 /ad728x15
 /ad?sponsor
 /ad_350x
@@ -1653,11 +1653,11 @@
 /adiframe.aspx?
 /adiframe/
 /AdifyAd.
-/AdInjector_
 /adim.html?ad
 /adimage
 /Adinator/
 /adinclude
+/AdInjector_
 /adinterax.
 /adisfy.com/
 /adj.php?
@@ -1872,8 +1872,8 @@
 /advfiles/
 /adview.
 /advision
-/advolatility.
 /advmaker.ru/
+/advolatility.
 /AdvScript.
 /advscripts/
 /AdWorks/
@@ -2530,8 +2530,8 @@
 /ShowBanner
 /showbanner
 /ShowFlashAd
-/side-ad.
 /side-ad-
+/side-ad.
 /sideadiframe.
 /SideAds/
 /sidebar_ad.
@@ -3532,6 +3532,7 @@ http://img.pornbb.org/live_ads.js
 http://img.pulsemgr.com/pm/?
 http://img.pulsemgr.com/script/
 http://img.tradepub.com/images/
+http://informationmadness.com/cms/images/banners/
 http://inheart.ru/welove/
 http://itweb.co.za/banners/
 http://iv.doubleclick.net/adj/
