--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: K+yrGWD4dyf/O+jSglMFhQ
-# Updated: 27 Sep 2010
+# Checksum: vD7VBWZ4CVSUGr+eu2bpEA
+# Updated: 28 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2911,6 +2911,8 @@ _308x100.
 _310x_140
 _323x120_
 _323x120_
+_728x15.
+_336x280_
 _336x120.
 _336x280.
 _336x850.
