--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: vD7VBWZ4CVSUGr+eu2bpEA
-# Updated: 28 Sep 2010
+# Checksum: pXETrvBOoDzmN1zaS+moFA
+# Updated: 29 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
 &ad_number=
@@ -549,6 +549,7 @@
 .digitaldesire.com/gotd.php?
 .digitaldesire.com/zbanners/
 .dinclinx.com/
+.digitalsatellite.tv/banners/
 .dk/eas?
 .dl4all.com/data4.files/dpopupwindow.js
 .dlqm.net/
