--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: pXETrvBOoDzmN1zaS+moFA
-# Updated: 29 Sep 2010
+# Checksum: G75XHj7x9i9DLYJzW+6zBw
+# Updated: 30 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2676,6 +2676,7 @@
 /wp-srv/ad/
 /wp_ad.js
 /wpAds/iframe.php?
+/www/ads/
 /www/delivery/
 /www/skdelivery/
 /xbanner.php?
