--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -914,6 +914,7 @@
 /gn_tracking.js
 /goAnalytics.
 /google-analytics.
+/google_analytics2.
 /google_analytics/
 /google_page_track
 /GoogleAnalytics
