--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: G75XHj7x9i9DLYJzW+6zBw
+# Checksum: XVW0ZCQ31wJVCyF9pXNH/Q
 # Updated: 30 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -841,7 +841,8 @@
 .macmillandictionary.com/info/frame.html?
 .madisonlogic.com/jsc?
 .madserver.eu/
-.magna.ru/partner/                                                                               
+.magna.ru/partner/
+.magniwork.com/banner/                                                                               
 .magnet.kiev.ua/
 .mail.yahoo.com/mc/md.php?
 .majorgeeks.com/aff/
