--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: XVW0ZCQ31wJVCyF9pXNH/Q
+# Checksum: Xm31w65hkW62Y3wS+2M35Q
 # Updated: 30 Sep 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -2283,6 +2283,7 @@
 /InlineTextAds?
 /insertAds.
 /intellitext.
+/ikan468x60_
 /iplgadshow
 /j/ads.js
 /javascript/ads.
