--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -889,6 +889,7 @@ http://ct.thegear-box.com/
 /ewtrack_
 /exe/indexer.php?
 /external-tracking.
+/fast-google-analytics/
 /fbanalytics/
 /fcgi-bin/
 /flash-stats.php?
