--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Xm31w65hkW62Y3wS+2M35Q
-# Updated: 30 Sep 2010
+# Checksum: Vn7z47drBq5qYXM4uwemyg
+# Updated: 1 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2175,6 +2175,9 @@
 /getVdopiaAds.
 /gfx/ads/
 /GgAdsense.
+/glam160.
+/glam300.
+/glam728.
 /google-ad?
 /google-ads/
 /google-adsense
