--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Vn7z47drBq5qYXM4uwemyg
+# Checksum: B+78sITBIT3ljtdEOOg75Q
 # Updated: 1 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -1690,6 +1690,7 @@
 /adpage.htm
 /adpanelcontent.
 /adpeeps
+/adp-pro/
 /ADPictures/
 /adpoint.
 /adpopup.
@@ -3043,6 +3044,7 @@ _Advertise180.
 _advertisement_
 _assets/ads/
 _banner/
+_banner_ad
 _blank_ads.
 _blogads.
 _bottom_ads_
