--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: B+78sITBIT3ljtdEOOg75Q
+# Checksum: xnyKNQGDkKRY0BW5tkH87w
 # Updated: 1 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -1540,6 +1540,9 @@
 /ad300x145.
 /ad728x15
 /ad?sponsor
+/ad_300_
+/ad_600_
+/ad_728_
 /ad_350x
 /ad_area.
 /AD_Banner
