--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: xnyKNQGDkKRY0BW5tkH87w
+# Checksum: 5HAolCpJXhPHZNPClYmG5w
 # Updated: 1 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -528,6 +528,7 @@
 .cybergamer.com.au/xml/sponsors.
 .cybermonitor.
 .dailymotion.com/masscast/
+.dashboardad.net/
 .datepersonalsfree.com/images/banner
 .dating-adv.com/
 .datingadnetwork.com/
