--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 5HAolCpJXhPHZNPClYmG5w
+# Checksum: WuFbJ+0rYDbkikJnu1MvWQ
 # Updated: 1 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -969,6 +969,7 @@
 .nude.hu/html/
 .nuggad.net/
 .nvero.net/
+.ny1.com/Content/ServeContent.
 .nz/ads/
 .nzads.net.nz/
 .oasfile.
