--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: WuFbJ+0rYDbkikJnu1MvWQ
+# Checksum: dpSPoFZjZypmhw6hUAFPbQ
 # Updated: 1 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -1632,6 +1632,7 @@
 /adcycle.
 /adengage
 /AdEngine/
+/addisplay/
 /adentry.
 /adExample?
 /adexclude/?
