--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: dpSPoFZjZypmhw6hUAFPbQ
+# Checksum: 6PLcZtTJigdIGxUjmTGIug
 # Updated: 1 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -3048,6 +3048,7 @@ _adshow.asp?
 _advert_vert
 _Advertise180.
 _advertisement_
+_advertorial3.
 _assets/ads/
 _banner/
 _banner_ad
