--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 6PLcZtTJigdIGxUjmTGIug
+# Checksum: ncCDvLSd0tyKeuNh3tjxAA
 # Updated: 1 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -3560,6 +3560,7 @@ http://jmn.jangonetwork.
 http://jobsyndicate.com/
 http://js.picsomania.info/
 http://jsg.dt00.net/
+http://jsfeedadsget.com/
 http://kaktuz.com/banner/
 http://kenny-glenn.net/images/longbanner_
 http://kermit.macnn.com/?DC
