--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: ncCDvLSd0tyKeuNh3tjxAA
+# Checksum: gqUvQrMjRaKKj8eI1cCxXw
 # Updated: 1 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -3687,6 +3687,7 @@ http://reklama.
 http://resources.infolinks.
 http://richmedia.yimg.
 http://richmedia247.com/
+http://sascentral.com/
 http://roia.biz/ts/d/
 http://roia.biz/ts/v/
 http://rok.com.com/rok-get
