--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: gqUvQrMjRaKKj8eI1cCxXw
+# Checksum: 6XFY6a6YtWlMMwrjZ7JOBQ
 # Updated: 1 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -214,6 +214,7 @@
 .adsonar.com/
 .adspace
 .adstogo.
+.adswizz.com/
 .adtaily.com/
 .adtaily.pl/
 .adtech.de/
