--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 6XFY6a6YtWlMMwrjZ7JOBQ
-# Updated: 1 Oct 2010
+# Checksum: y3kn0XKw6D5qBVGSe47sEQ
+# Updated: 2 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1798,7 +1798,8 @@
 /adsense?
 /adsense_
 /adsensecamp.com/
-/adsensepremium
+/css/adsense
+/js/adsense
 /adsensev
 /adserv_launch
 /adserve.cgi
