--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: y3kn0XKw6D5qBVGSe47sEQ
+# Checksum: U4+Mqw8kec92gixWDPP+Wg
 # Updated: 2 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -1685,6 +1685,7 @@
 /adManagementAdv
 /admarket/
 /admaster.
+/ad.mason?
 /admedia
 /admentor/
 /admentor/
