--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: U4+Mqw8kec92gixWDPP+Wg
+# Checksum: rV98FKRR8ebu2ts0XnWuwg
 # Updated: 2 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -128,7 +128,6 @@
 .adcentriconline.
 .adclick.
 .adcloud.net/
-.adcontent
 .addynamix.
 .adecn.com/
 .adengage.
@@ -1493,21 +1492,18 @@
 /ad-box-
 /ad-boxes-
 /ad-feedback.
-/ad-html
 /ad-identifier.
 /ad-iframe-
 /ad-indicator
 /ad-inject/
 /ad-layer
 /ad-leaderboard
-/ad-middle
 /ad-openx.
 /ad-refresh-
 /ad-server/
 /ad-skyscraper
-/ad-square
-/ad-topban
-/ad-vertical
+/ad-topbanner-
+/ad-verticalBar.
 /ad.asp?
 /ad.aspx?
 /ad.gif?
@@ -1518,11 +1514,9 @@
 /ad.serve.cgi?
 /ad.valary?
 /ad.view?
-/ad/468x
 /ad/a.aspx?
 /ad/article_
 /ad/bann
-/ad/code
 /ad/common/
 /ad/frame
 /ad/google
@@ -1702,7 +1696,6 @@
 /ADPictures/
 /adpoint.
 /adpopup.
-/AdPostInject
 /adproxy/
 /adrawdata/
 /adRelated
@@ -1997,7 +1990,6 @@
 /beacon/?
 /behaviorAds/
 /belo_oas.
-/BelowNewsAd
 /bg_ads_
 /BigBoxAd.
 /bigtopl.swf
@@ -2358,7 +2350,6 @@
 /mod/adman/
 /mod_ad/
 /modules_ads.
-/mr_tb_ad.
 /mr_videoad.
 /msnpopup.php
 /mstextad?
@@ -2607,6 +2598,7 @@
 /swf/banner.swf?
 /swf/bcacudeomodule
 /syndicate.payloadz.
+/sys/ad/
 /sys/ban.asp?
 /system/ads/
 /TabAds/
@@ -3025,7 +3017,6 @@ _960_90.
 _970x30_
 _ad.php?
 _ad_Actron.
-_ad_advert
 _ad_change.
 _ad_code.
 _ad_content.
@@ -3079,7 +3070,6 @@ _hp_promo_
 _iad.html?
 _iframe_ad_
 _leftx280_
-_minibanner
 _org_ad.
 _platform_ads_
 _popovers_
@@ -3093,7 +3083,6 @@ _textlinkspot.
 _topad.php
 _web_adhoc?
 _webbanner_
-Ad468x60
 adbot.com
 adbutler.
 adcomplete.com/
@@ -3840,7 +3829,6 @@ https://view.atdmt.
 images/ads/
 img.freexxxpages.net/z/
 innerads
-LargeFlashAd.js
 left-ads
 link-exchange
 network.stripplayer
