--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: rV98FKRR8ebu2ts0XnWuwg
+# Checksum: ZbhgJrRjZPSAb7srFbeXHA
 # Updated: 2 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -484,7 +484,6 @@
 .com/awe.js
 .com/banners/
 .com/doubleclick/
-.com/fullad
 .com/gads/
 .com/hserver/
 .com/interstitial.
@@ -2134,6 +2133,7 @@
 /frame_ads_
 /frameads.
 /friendfinder_
+/fulladbazee.
 /gads.js
 /gafv_adapter.
 /galleries/banners/
