optimise v3 and sort

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: ZbhgJrRjZPSAb7srFbeXHA
+# Checksum: GgPkXC6Wt6Yxfa9emmtL/A
 # Updated: 2 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -548,8 +548,8 @@
 .dgmaustralia.
 .digitaldesire.com/gotd.php?
 .digitaldesire.com/zbanners/
-.dinclinx.com/
 .digitalsatellite.tv/banners/
+.dinclinx.com/
 .dk/eas?
 .dl4all.com/data4.files/dpopupwindow.js
 .dlqm.net/
@@ -842,8 +842,8 @@
 .madisonlogic.com/jsc?
 .madserver.eu/
 .magna.ru/partner/
-.magniwork.com/banner/                                                                               
 .magnet.kiev.ua/
+.magniwork.com/banner/                                                                               
 .mail.yahoo.com/mc/md.php?
 .majorgeeks.com/aff/
 .majorgeeks.com/images/banners/
@@ -1507,6 +1507,7 @@
 /ad.aspx?
 /ad.gif?
 /ad.html?
+/ad.mason?
 /ad.php3?
 /ad.php?
 /ad.sense/
@@ -1537,9 +1538,9 @@
 /ad728x15
 /ad?sponsor
 /ad_300_
+/ad_350x
 /ad_600_
 /ad_728_
-/ad_350x
 /ad_area.
 /AD_Banner
 /ad_banner
@@ -1572,7 +1573,6 @@
 /ad_manage.
 /ad_media/
 /ad_medium_
-/ad_onbit
 /ad_peel/
 /ad_pos=
 /ad_position
@@ -1624,9 +1624,9 @@
 /adcount.
 /adcreative/
 /adcycle.
+/addisplay/
 /adengage
 /AdEngine/
-/addisplay/
 /adentry.
 /adExample?
 /adexclude/?
@@ -1678,7 +1678,6 @@
 /adManagementAdv
 /admarket/
 /admaster.
-/ad.mason?
 /admedia
 /admentor/
 /admentor/
@@ -1687,11 +1686,11 @@
 /adnetmedia.
 /adng.html?
 /adotube_adapter.
+/adp-pro/
 /adp.html
 /adpage.htm
 /adpanelcontent.
 /adpeeps
-/adp-pro/
 /ADPictures/
 /adpoint.
 /adpopup.
@@ -1791,8 +1790,6 @@
 /adsense?
 /adsense_
 /adsensecamp.com/
-/css/adsense
-/js/adsense
 /adsensev
 /adserv_launch
 /adserve.cgi
@@ -1994,7 +1991,6 @@
 /bigtopl.swf
 /bilder/anzeige
 /bilder/promo
-/bizbannerre
 /blog/ads/
 /blogad.
 /blogads
@@ -2017,7 +2013,6 @@
 /cgi-bin/ads/
 /cgi-bin/ads2/
 /cgi-bin/ads_
-/cgi-bin/adx
 /cgi-bin/banner
 /cgi-bin/iframe/
 /cgi-exe/ad
@@ -2046,6 +2041,7 @@
 /cpm160.
 /cpmbanner.
 /cpmrect.
+/css/adsense
 /cssjs/ads/
 /curlAd.
 /custom/ads
@@ -2221,12 +2217,14 @@
 /ifb/google_afc.
 /iframe.ad/
 /iframe/ad/
+/iframe/ad_
 /iframe/ads/
 /iframe_ad_
 /iframe_ads?
 /iframe_chitika_
 /iframead_
 /iframes/adbrite.
+/ikan468x60_
 /image/ads/
 /image/ads/
 /image/ads_
@@ -2288,7 +2286,6 @@
 /InlineTextAds?
 /insertAds.
 /intellitext.
-/ikan468x60_
 /iplgadshow
 /j/ads.js
 /javascript/ads.
@@ -2303,6 +2300,7 @@
 /js/ads
 /js/ads/
 /js/ads_
+/js/adsense
 /js/takeover/
 /js_source/
 /jsAdScript
@@ -2920,10 +2918,9 @@ _308x100.
 _310x_140
 _323x120_
 _323x120_
-_728x15.
-_336x280_
 _336x120.
 _336x280.
+_336x280_
 _336x850.
 _350_100.
 _350_100_
@@ -2991,6 +2988,7 @@ _72890.jpg
 _728_90.
 _728by90_
 _728x-90.
+_728x15.
 _728x150.
 _728x60.
 _728x90-
@@ -3551,8 +3549,8 @@ http://jbrlsr.com/
 http://jmn.jangonetwork.
 http://jobsyndicate.com/
 http://js.picsomania.info/
-http://jsg.dt00.net/
 http://jsfeedadsget.com/
+http://jsg.dt00.net/
 http://kaktuz.com/banner/
 http://kenny-glenn.net/images/longbanner_
 http://kermit.macnn.com/?DC
@@ -3679,7 +3677,6 @@ http://reklama.
 http://resources.infolinks.
 http://richmedia.yimg.
 http://richmedia247.com/
-http://sascentral.com/
 http://roia.biz/ts/d/
 http://roia.biz/ts/v/
 http://rok.com.com/rok-get
@@ -3695,6 +3692,7 @@ http://s.xvideos.com/
 http://s3.buysellads.com/
 http://sa-m.streamads.com/view?
 http://sa.entireweb.com/
+http://sascentral.com/
 http://scripts.atmalinks.com/
 http://search.spotxchange.com/flash/
 http://servali.net/
