--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: GgPkXC6Wt6Yxfa9emmtL/A
+# Checksum: p/Arx6H/3k91NH5mn+MS/A
 # Updated: 2 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -2735,7 +2735,6 @@
 300x250.png
 300x250.swf
 300x250.swf?
-300x250ad
 300x250B.swf
 300x60.gif
 302x52.swf
@@ -2763,8 +2762,6 @@
 468x60_1
 468x60_2.
 468x60ad
-468x60banner
-468x60nologo.swf
 468X80-
 468X80.
 468x80.gif
@@ -2915,7 +2912,6 @@ _300x60_
 _300x75_
 _300x80.
 _308x100.
-_310x_140
 _323x120_
 _323x120_
 _336x120.
