--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: p/Arx6H/3k91NH5mn+MS/A
+# Checksum: MocO9VMjdLh8LP0SJAI3HQ
 # Updated: 2 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -2197,7 +2197,6 @@
 /googleafs.js
 /gopro_interstitial.
 /gui2/mubanner
-/headerAdvert
 /hikaku/banner/
 /hk.yimg.com/a/
 /house-ad/
@@ -3085,10 +3084,6 @@ ads/468x60
 ads4u.nl/
 adshop.ru/
 adulttds.com
-advert_bottom
-advert_cent
-advert_left
-advert_right
 Advertisement.do?
 affiliate/banner
 affiliateBannerShow.aspx?
