--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: MocO9VMjdLh8LP0SJAI3HQ
-# Updated: 2 Oct 2010
+# Checksum: v1qwN1Rmfq8CltJC1Ln26Q
+# Updated: 3 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
 &ad_number=
@@ -560,6 +560,8 @@
 .dpbolvw.
 .drowle.com/cm/banners/
 .dtmpub.com/
+.dubcnn.com/hgright
+.dubcnn.com/hgleft
 .dynamitedata.com/cgi-bin/search.pl?
 .e-hentai.org/imp2/
 .e-hentai.ws/imp2/
