optimise regional espanol-port filter

--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -19,7 +19,7 @@ _publicidade_
 .br/banner.aspx?
 .br/banners/
 .br/imagensdb/banners/
-.br/publicidad
+/publicidadevertical.
 .br/swf/banners/
 .buscape.com.br/skin/
 .cadenaser.com/est.pl?
@@ -134,9 +134,9 @@ _publicidade_
 /ads/contextual
 /ads/creatives/
 /adserver.clix.pt/
-/Bannerctgineses
+/Bannerctgineses.
 /bannerWoo.
-/bannerwoopos
+/bannerwoopos4.
 /bbtstats/
 /ctrl.gif?ref
 /dixioforyoursite/
@@ -239,4 +239,3 @@ http://www.aurora-israel.co.il/images/banners
 http://zahir2.aeiou.pt/
 http://zahirx.aeiou.pt/
 https://seguro.via-rs.net/
-publicidade.swf
