--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: v1qwN1Rmfq8CltJC1Ln26Q
+# Checksum: negxQGv9lhJYIELGd3zwAA
 # Updated: 3 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -475,6 +475,7 @@
 .com/adshow
 .com/adstream_
 .com/adv/
+.com/addyn/
 .com/adv3/
 .com/advert_
 .com/advt/
