--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: negxQGv9lhJYIELGd3zwAA
+# Checksum: w810VAeD7f8EhdLuTL/tEw
 # Updated: 3 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -462,6 +462,7 @@
 .com/ad2/
 .com/ad_
 .com/adds/
+.com/addyn/
 .com/adfile/
 .com/adimg/
 .com/adjs/
@@ -475,7 +476,6 @@
 .com/adshow
 .com/adstream_
 .com/adv/
-.com/addyn/
 .com/adv3/
 .com/advert_
 .com/advt/
@@ -561,8 +561,8 @@
 .dpbolvw.
 .drowle.com/cm/banners/
 .dtmpub.com/
-.dubcnn.com/hgright
 .dubcnn.com/hgleft
+.dubcnn.com/hgright
 .dynamitedata.com/cgi-bin/search.pl?
 .e-hentai.org/imp2/
 .e-hentai.ws/imp2/
@@ -1657,6 +1657,8 @@
 /adhug_jc.
 /adiframe.aspx?
 /adiframe/
+/adify_box.
+/adify_sky.
 /AdifyAd.
 /adim.html?ad
 /adimage
