--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: w810VAeD7f8EhdLuTL/tEw
+# Checksum: uXHNPg1QVQ9W2+JPlloFAA
 # Updated: 3 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -2010,6 +2010,7 @@
 /BottomAd.
 /bravenet/images/
 /buttonad/
+/buyer/dyad/
 /buzz/ads/
 /cached/bnr_
 /call/pubif/
