--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: uXHNPg1QVQ9W2+JPlloFAA
+# Checksum: GHiLpVe3kB+Ua3egFPBjRA
 # Updated: 3 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -3522,6 +3522,7 @@ http://iframe.adultfriendfinder.
 http://iframe.mediaplazza.
 http://iframe.travel.yahoo.com/
 http://ilovecheating.com/ads/
+http://info.break.com/break/html/
 http://image.cecash.
 http://image.click.livedoor.
 http://image.nsk-sys.com/
