--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: GHiLpVe3kB+Ua3egFPBjRA
-# Updated: 3 Oct 2010
+# Checksum: 4Qn2p3GcumUQrJlqCmDeaQ
+# Updated: 4 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2479,6 +2479,7 @@
 /reklama/
 /reklame.asp?
 /reklame/
+/RestorationAd-
 /relatedads
 /remove_ads.
 /remove_ads2.
