--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -360,6 +360,7 @@
 .letsstat.nl/
 .libstat.com/
 .lijit.com/beacon?
+.life.com/sm-stat/
 .link.informer.com/
 .linkedin.com/analytics/
 .linkwithin.com/pixel.png
