--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 4Qn2p3GcumUQrJlqCmDeaQ
+# Checksum: 2DJz0gEGI+nxea+R9Cy9+A
 # Updated: 4 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -2029,6 +2029,7 @@
 /click_to_buy/
 /cnads.js
 /cnwk.1d/Ads/
+/com/ads/
 /combo?darla/
 /common/ad_
 /common/dart_wrapper_
