--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 2DJz0gEGI+nxea+R9Cy9+A
-# Updated: 4 Oct 2010
+# Checksum: 2B1vrGip7JuiHbheQqR06g
+# Updated: 5 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
 &ad_number=
@@ -711,6 +711,7 @@
 .hotkeys.com/
 .hotlog.ru/
 .hover.in/
+.howtogeek.com/public/js/TmnAdsense-
 .hsmclick.com/
 .html?wpl=
 .hypernews.ru/
@@ -2480,11 +2481,11 @@
 /reklama/
 /reklame.asp?
 /reklame/
-/RestorationAd-
 /relatedads
 /remove_ads.
 /remove_ads2.
 /RequestAdvertisement.
+/RestorationAd-
 /retrad.
 /richOAS.
 /right_ad.
@@ -3524,7 +3525,6 @@ http://iframe.adultfriendfinder.
 http://iframe.mediaplazza.
 http://iframe.travel.yahoo.com/
 http://ilovecheating.com/ads/
-http://info.break.com/break/html/
 http://image.cecash.
 http://image.click.livedoor.
 http://image.nsk-sys.com/
@@ -3540,6 +3540,7 @@ http://img.pornbb.org/live_ads.js
 http://img.pulsemgr.com/pm/?
 http://img.pulsemgr.com/script/
 http://img.tradepub.com/images/
+http://info.break.com/break/html/
 http://informationmadness.com/cms/images/banners/
 http://inheart.ru/welove/
 http://itweb.co.za/banners/
