--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -359,8 +359,8 @@
 .legolas-media.com/
 .letsstat.nl/
 .libstat.com/
-.lijit.com/beacon?
 .life.com/sm-stat/
+.lijit.com/beacon?
 .link.informer.com/
 .linkedin.com/analytics/
 .linkwithin.com/pixel.png
@@ -586,7 +586,6 @@
 .tellapart.com/
 .terra.com.mx/js/metrics_
 .thecounter.com/id
-http://ct.thegear-box.com/
 .themis.yahoo.com/a?
 .thespringbox.com/analytics/
 .thinkgeek.com/js/rts.js
@@ -918,6 +917,7 @@ http://ct.thegear-box.com/
 /GoogleAnalytics
 /googleanalyze
 /gstats.cn/
+/gweb/analytics/
 /headupStats.
 /hg?hc=&hb=
 /Hit.ashx?
@@ -1503,6 +1503,7 @@ http://counter2.
 http://counters.
 http://counting.
 http://countyou.de/track/
+http://ct.thegear-box.com/
 http://cts-log.channelintelligence.com/
 http://cts.channelintelligence.
 http://cts.tradepub.
@@ -1532,8 +1533,8 @@ http://fnlog.
 http://fx.gtop.ro/
 http://ga.webdigi.co.uk/
 http://geo.ltassrv.com/
-http://geo.yahoo.com/
 http://geo.perezhilton.com/
+http://geo.yahoo.com/
 http://geoip.
 http://getstatistics.se/
 http://hellosherpa.com/
