--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 2B1vrGip7JuiHbheQqR06g
+# Checksum: zEKXDZCoZYvhH8SNUu1CPA
 # Updated: 5 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -664,6 +664,7 @@
 .g-cash.biz/banner/
 .g.doubleclick.
 .g4whisperermedia.
+.gayadpros.com/
 .game-advertising-online.
 .gameads.com/
 .gamecetera.com/show/
