--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: zEKXDZCoZYvhH8SNUu1CPA
+# Checksum: hLQ7eSMCfIcJCrintKwJHw
 # Updated: 5 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -2294,6 +2294,7 @@
 /InlineTextAds?
 /insertAds.
 /intellitext.
+/InTextAds.
 /iplgadshow
 /j/ads.js
 /javascript/ads.
