--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: hLQ7eSMCfIcJCrintKwJHw
+# Checksum: uC0jQI/k2glm1CFmXURNCA
 # Updated: 5 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -2181,6 +2181,7 @@
 /getsponslinks
 /getVdopiaAds.
 /gfx/ads/
+/gExternalAd.
 /GgAdsense.
 /glam160.
 /glam300.
