--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: uC0jQI/k2glm1CFmXURNCA
+# Checksum: qu2ojTFl9s8MDVGYHQSqQQ
 # Updated: 5 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -1885,6 +1885,7 @@
 /AdvScript.
 /advscripts/
 /AdWorks/
+/adwidgets/
 /adworldmedia/
 /adx.js
 /adx/gamestar.
