--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -648,6 +648,7 @@
 .vizu.com/
 .voicefive.com/
 .vtracker.
+.vue.com/dm.gif?
 .w55c.net/
 .waudit.cz/
 .web-stat.com/
@@ -811,6 +812,7 @@
 /clicktrack/
 /clickTracker.js
 /clicktracking
+/ClickTracks_
 /clicktrends/
 /cmslog.dll?
 /cnn/images/1.gif
@@ -861,7 +863,6 @@
 /countstat.php?
 /countus.php
 /cqcounter.
-/ClickTracks_
 /CreateVIDCookie.aspx?
 /cs_api/log
 /cwTRACK.js
@@ -1230,8 +1231,8 @@
 /statsupdater.aspx?
 /stt/track.js
 /stt/track/
-/surveyoverlay/
 /surphace_track.
+/surveyoverlay/
 /swfproxy-
 /syndication/metrics/
 /sys/pixel.gif
@@ -1594,6 +1595,7 @@ http://optimizely.appspot.com/tracking/
 http://otracking.com/
 http://partner.cynapse.com/
 http://partner.like.com/
+http://pearsonvue.com/dm.gif?
 http://pg.buzzfeed.com/
 http://pixelcounter
 http://pmetrics.
@@ -1656,6 +1658,7 @@ http://top.
 http://top100-
 http://tr-metrics.loomia.com/
 http://track.cbs.com/
+http://track.ft.com/
 http://track.gawker.com/
 http://track.mybloglog.com/
 http://track.netshelter.net/
@@ -1682,7 +1685,6 @@ http://trax.tvguide.com/
 http://triad.
 http://trk.enecto.
 http://trk.newtention.
-http://track.ft.com/
 http://tsk5.com/
 http://twitter.com/scribe?log
 http://twittercounter.com/embed/?
