--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: qu2ojTFl9s8MDVGYHQSqQQ
-# Updated: 5 Oct 2010
+# Checksum: Fs/L9+32jIzCQMQ8FksdrA
+# Updated: 6 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
 &ad_number=
@@ -614,6 +614,7 @@
 .fastclick.net/
 .fatbackmedia.com/assets/
 .feedsportal.com/r/
+.foonad.com/
 .fftube.com/banners/
 .filecabi.net/728
 .filecabi.net/crons/friends-
