--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Fs/L9+32jIzCQMQ8FksdrA
+# Checksum: vVJL/pR56zH4881tSV2EYw
 # Updated: 6 Oct 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: fanboyadblock@fanboy.co.nz  http://fanboy.co.nz/adblock
@@ -1655,6 +1655,7 @@
 /AdHandler.
 /adhandler/
 /AdHandlers
+/adhandler.
 /adHeader
 /adheader.
 /adhug_jc.
